lang/lc/tests/err_cast.expected.err
err_cast.sys: In system `test':
err_cast.sys:7: error: invalid type conversion
