lang/lc/tests/err_cast.sys
type color = enum { R, G, B };

system test()
{
	bool a;
	color b;
	b = a as color;
}
